--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ Rue :"><img class="nates" class="img-thumbnail" src="photos/nates.PNG" alt="nate
     <li class="page-item"><a class="page-link bg-dark"  style="color:white" href="#">Suivant</a></li>
   </ul>
 </nav>
+
 <style type="text/css">
 #translator-wrapper {
   display:block;
@@ -254,12 +255,12 @@ Rue :"><img class="nates" class="img-thumbnail" src="photos/nates.PNG" alt="nate
   max-width:300px;
   border:none;
   background-color:#fff;
-  color:#444;
+  color:#212529;
   overflow:hidden;
   position:relative;
   height:40px;
   line-height:40px;
-  border:1px solid #e0e0e0;
+  border:1px solid #black;
 }
 #translator-wrapper select {
   border:none;
@@ -267,7 +268,7 @@ Rue :"><img class="nates" class="img-thumbnail" src="photos/nates.PNG" alt="nate
   font-family:'Verdana',Arial,Sans-Serif;
   font-size:12px;
   width:100%;
-  color:#444;
+  color:#212529;
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
   box-sizing:border-box;
@@ -278,7 +279,7 @@ Rue :"><img class="nates" class="img-thumbnail" src="photos/nates.PNG" alt="nate
 #translator-wrapper a,
 #translator-wrapper a:hover {
   display:block;
-  background-color:#1B84C6;
+  background-color:#212529;
   border:none;
   color:#fff;
   margin:0 0;
@@ -314,7 +315,7 @@ Rue :"><img class="nates" class="img-thumbnail" src="photos/nates.PNG" alt="nate
   cursor:pointer;
 }
 option {
-  background:#1B84C6;
+  background:#212529;
   color:#fff;
 }
 </style>
